--- a/index.html
+++ b/index.html
@@ -5,8 +5,63 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+          <a class="main-header-logo"><img src="img/logo-sedona.svg" width="138" height="71" alt="City of Sedona"></a>
+        <ul class="site-navigation">
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="photoandvideo.html">Фото и видео</a></li>
+          <li><a href="statesmap.html">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="intro">
+      <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </section>
+      <section class="dates-of-trip">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения гостиниц в седоне </p>
+      </section>
+      <a class="button button-brown" href="searchforhotels.html">Поиск гостиницы в Седоне</button>
+      <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+        <p>
+        <label for="check-in-date">Дата заезда:</label>
+      <input id="check-in-date" type="text" name="date-of-check-in" placeholder="24 апреля 2017">
+      </p>
+      <p>
+      <label for="check-out-date">Дата выезда:</label>
+      <input id="check-out-date" type="text" name="date-of-check-out" placeholder="4 июля 2017">
+      </p>
+      <p>
+      <label for="adults-number">Взрослые:</label>
+      <button type="button" class="text-hidden">Уменьшить</button>
+      <input id="adults-number" type="text" name="number-of-adults" value="2">
+      <button type="button" class="text-hidden">Увеличить</button>
+      <label for="adults-number">Дети:</label>
+      <button type="button" class="text-hidden">Уменьшить</button>
+      <input id="children-number" type="text" name="number-of-children" value="0">
+      <button type="button" class="text-hidden">Увеличить</button>
+      </p>
+      <button class="button button-blue" type="submit">Найти</button>
+      </form>
+    </main>
+    <footer class="main-footer">
+      <p class="footer-hashteg">#Visitsedona</p>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button social-button-twitter" href="#">Twitter</a></li>
+          <li><a class="social-button social-button-facebook" href="#">Facebook</a></li>
+          <li><a class="social-button social-button-youtube" href="#">Youtube</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">Website by
+      <a><img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy"></a>
+      </p>
+    </footer>
   </body>
+</html>
+
 </html>
