Поменяла p на div

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
          <a class="button button-brown" href="searchforhotels.html">
             Поиск гостиницы в Седоне</button>
             <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-               <p>
+               <div>
                   <label for="check-in-date">Дата заезда:</label>
                   <input id="check-in-date" type="text" name="date-of-check-in" placeholder="24 апреля 2017">
-               </p>
+               </div>
                <div>
                   <label for="check-out-date">Дата выезда:</label>
                   <input id="check-out-date" type="text" name="date-of-check-out" placeholder="4 июля 2017">
