--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <body>
       <header class="main-header">
          <nav class="main-navigation">
-            <a class="main-header-logo"><img src="img/logo.png" width="138" height="71" alt="City of Sedona"></a>
+            <a class="main-header-logo"><img src="img/logo.png" width="138" height="71" alt="Логотип города Седона"></a>
             <ul class="site-navigation">
                <li><a href="info.html">Информация</a></li>
                <li><a href="photoandvideo.html">Фото и видео</a></li>
@@ -56,13 +56,13 @@
       <p class="footer-hashteg">#Visitsedona</p>
       <div class="footer-social">
       <ul>
-      <li><a class="social-button social-button-twitter" href="#">Twitter</a></li>
-      <li><a class="social-button social-button-facebook" href="#">Facebook</a></li>
-      <li><a class="social-button social-button-youtube" href="#">Youtube</a></li>
+      <li><a class="social-button social-button-twitter" href="#" aria-label="HTML Академия в Твиттере">Twitter</a></li>
+      <li><a class="social-button social-button-facebook" href="#" aria-label="HTML Академия на Фейсбуке">Facebook</a></li>
+      <li><a class="social-button social-button-youtube" href="#" aria-label="HTML Академия на Ютубе">Youtube</a></li>
       </ul>
       </div>
       <p class="footer-copyright">Website by
-      <a><img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy"></a>
+      <a><img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Академии"></a>
       </p>
       </footer>
    </body>
