--- a/hotels.html
+++ b/hotels.html
@@ -10,7 +10,7 @@
    <body class="inner-page">
       <header class="main-header">
          <nav class="main-navigation">
-            <a href="index.html"><img src="img/logo.png" width="138" height="71" alt="City of Sedona"></a>
+            <a href="index.html"><img src="img/logo.png" width="138" height="71" alt="Логотип города Седона"></a>
             <ul class="site-navigation">
                <li><a href="info.html">Информация</a></li>
                <li><a href="photoandvideo.html">Фото и видео</a></li>
@@ -24,7 +24,7 @@
             <ul>
                <li>
                   <div>
-                     <img src="img/image-amara.png" width="135" height="90" alt="Amara Resort & Spa">
+                     <img src="img/image-amara.png" width="135" height="90" alt="Гостиница Amara Resort & Spa">
                   </div>
                   <div>
                      <a>Amara Resort & Spa</a>
@@ -42,7 +42,7 @@
                </li>
                <li>
                   <div>
-                     <img src="img/image-desert.png" width="135" height="90" alt="Desert Qual Inn">
+                     <img src="img/image-desert.png" width="135" height="90" alt="Мотель Desert Qual Inn">
                   </div>
                   <div>
                      <a>Desert Qual Inn</a>
@@ -60,7 +60,7 @@
                </li>
                <li>
                   <div>
-                     <img src="img/image-villas.png" width="135" height="90" alt="Villas at Poco Diablo">
+                     <img src="img/image-villas.png" width="135" height="90" alt="Апартаменты Villas at Poco Diablo">
                   </div>
                   <div>
                      <a>Villas at Poco Diablo</a>
@@ -81,13 +81,13 @@
          <p class="footer-hashteg">#Visitsedona</p>
          <div class="footer-social">
             <ul>
-               <li><a class="social-button social-button-twitter" href="#">Twitter</a></li>
-               <li><a class="social-button social-button-facebook" href="#">Facebook</a></li>
-               <li><a class="social-button social-button-youtube" href="#">Youtube</a></li>
+               <li><a class="social-button social-button-twitter" href="#" aria-label="HTML Академия в Твиттере">Twitter</a></li>
+               <li><a class="social-button social-button-facebook" href="#" aria-label="HTML Академия на Фейсбуке">Facebook</a></li>
+               <li><a class="social-button social-button-youtube" href="#" aria-label="HTML Академия на Ютубе">Youtube</a></li>
             </ul>
          </div>
          <p>Website by
-            <a><img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy"></a>
+            <a><img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Академии"></a>
          </p>
       </footer>
    </body>
