--- a/hotels.html
+++ b/hotels.html
@@ -10,7 +10,7 @@
    <body class="inner-page">
       <header class="main-header">
          <nav class="main-navigation">
-            <a href="index.html"><img src="img/logo.png" width="138" height="71" alt="Логотип города Седона"></a>
+            <a class="main-header-logo" href="index.html"><img src="img/logo.png" width="138" height="71" alt="Логотип города Седона"></a>
             <ul class="site-navigation">
                <li><a href="info.html">Информация</a></li>
                <li><a href="photoandvideo.html">Фото и видео</a></li>
@@ -34,10 +34,8 @@
                      <a class="button-brown booking" href="bookinghotel.html">Забронировать</a>
                   </div>
                   <div>
-                     <aside>
-                        <img src="img/star.svg">
-                        <span class="rating">8,5</span>
-                     </aside>
+                     <img src="img/star.svg">
+                     <span class="rating">8,5</span>
                   </div>
                </li>
                <li>
@@ -52,10 +50,8 @@
                      <a class="button-brown booking" href="bookingmotel">Забронировать</a>
                   </div>
                   <div>
-                     <aside>
-                        <img src="img/star.svg">
-                        <span class="rating">8,9</span>
-                     </aside>
+                     <img src="img/star.svg">
+                     <span class="rating">8,9</span>
                   </div>
                </li>
                <li>
