--- a/hotels.html
+++ b/hotels.html
@@ -8,6 +8,7 @@
       <link href="styles/css/style.css" rel="stylesheet">
    </head>
    <body class="inner-page">
+      <div class="main-container">
       <header class="main-header">
          <nav class="main-navigation">
             <a class="main-header-logo" href="index.html"><img src="img/logo.png" width="138" height="71" alt="Логотип города Седона"></a>
@@ -86,5 +87,6 @@
             <a><img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Академии"></a>
          </p>
       </footer>
+      </div>
    </body>
 </html>
