--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link href="styles/css/style.css" rel="stylesheet">
    </head>
    <body>
+      <div class="main-container">
       <header class="main-header">
          <nav class="main-navigation">
             <a class="main-header-logo"><img src="img/logo.png" width="138" height="71" alt="Логотип города Седона"></a>
@@ -20,6 +21,10 @@
          </nav>
       </header>
       <main class="container">
+         <section class="welcome-screen">
+            <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+            <img src="img/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону">
+         </section>
          <section class="intro">
             <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
             <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -65,5 +70,6 @@
       <a><img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Академии"></a>
       </p>
       </footer>
+      </div>
    </body>
 </html>
